--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,11 +34,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SistemaVentas
 excludes=
 file.reference.AbsoluteLayout.jar=D:\\Proyectos\\Sistema-venta-java-v1\\librerias\\AbsoluteLayout.jar
+file.reference.AbsoluteLayout.jar-1=D:\\Desarrollo-2021-2\\POO-Desarrollo-21-2\\Sistema-venta-java-v1\\librerias\\AbsoluteLayout.jar
 file.reference.itextpdf-5.5.1.jar=D:\\Proyectos\\Sistema-venta-java-v1\\librerias\\itextpdf-5.5.1.jar
+file.reference.itextpdf-5.5.1.jar-1=D:\\Desarrollo-2021-2\\POO-Desarrollo-21-2\\Sistema-venta-java-v1\\librerias\\itextpdf-5.5.1.jar
 file.reference.jcalendar-1.4.jar=D:\\Proyectos\\Sistema-venta-java-v1\\librerias\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=D:\\Desarrollo-2021-2\\POO-Desarrollo-21-2\\Sistema-venta-java-v1\\librerias\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.23.jar=D:\\Proyectos\\Sistema-venta-java-v1\\librerias\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.jar-1=D:\\Desarrollo-2021-2\\POO-Desarrollo-21-2\\Sistema-venta-java-v1\\librerias\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=D:\\Proyectos\\Sistema-venta-java-v1\\librerias\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-1=D:\\Desarrollo-2021-2\\POO-Desarrollo-21-2\\Sistema-venta-java-v1\\librerias\\jfreechart-1.0.19.jar
 file.reference.mysql-connector-java-8.0.19.jar=D:\\Proyectos\\Sistema-venta-java-v1\\librerias\\mysql-connector-java-8.0.19.jar
+file.reference.mysql-connector-java-8.0.19.jar-1=D:\\Desarrollo-2021-2\\POO-Desarrollo-21-2\\Sistema-venta-java-v1\\librerias\\mysql-connector-java-8.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -48,7 +54,13 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.mysql-connector-java-8.0.19.jar}
+    ${file.reference.mysql-connector-java-8.0.19.jar}:\
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.itextpdf-5.5.1.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar-1}:\
+    ${file.reference.jfreechart-1.0.19.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.19.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
